[gd_scene load_steps=44 format=4 uid="uid://cfouj58y3frym"]

[ext_resource type="TileSet" uid="uid://dyf0c38hkcw8q" path="res://apt_tiles.tres" id="1_f6swm"]
[ext_resource type="Script" uid="uid://d4hffu667kf5p" path="res://scripts/dayFour/d4_livingroom.gd" id="1_qop75"]
[ext_resource type="PackedScene" uid="uid://c8wffxipu48vg" path="res://scenes/player.tscn" id="2_3yau0"]
[ext_resource type="Texture2D" uid="uid://mvgkrnayxjlf" path="res://assets/misc/square.png" id="2_8glna"]
[ext_resource type="PackedScene" uid="uid://cth4hylf5dh1y" path="res://scenes/Objects/couch.tscn" id="2_ywxxk"]
[ext_resource type="Texture2D" uid="uid://bm0b03u6il0ke" path="res://assets/misc/spotlight.png" id="3_3yau0"]
[ext_resource type="Script" uid="uid://m1npkkbsfmks" path="res://scripts/d2_tv_light.gd" id="4_wp1dh"]
[ext_resource type="PackedScene" uid="uid://banhcwdrm7u2h" path="res://scenes/Objects/theBox.tscn" id="5_anwel"]
[ext_resource type="PackedScene" uid="uid://cbsr1cdpporx" path="res://scenes/Objects/lamp.tscn" id="6_e7h72"]
[ext_resource type="PackedScene" uid="uid://cgpoipqm1ls12" path="res://scenes/Objects/plant_d3.tscn" id="7_bev3e"]
[ext_resource type="Texture2D" uid="uid://xtdk2s5q4bfx" path="res://assets/objects/broken_picture.png" id="8_v5l6h"]
[ext_resource type="Texture2D" uid="uid://c5t4va7d62rg3" path="res://assets/misc/glass_shard.png" id="9_qop75"]
[ext_resource type="Texture2D" uid="uid://dmebk3gpcrv4a" path="res://assets/misc/glass_shard_2.png" id="10_s86u8"]
[ext_resource type="PackedScene" uid="uid://c014t28xfb40m" path="res://scenes/Objects/radiator.tscn" id="11_8glna"]
[ext_resource type="Texture2D" uid="uid://b5hki7kvg72vf" path="res://assets/misc/dust_particle.png" id="12_808va"]
[ext_resource type="Texture2D" uid="uid://bs7cxyqisn674" path="res://scenes/Days/DayThree/d3.tres" id="13_e2o4e"]
[ext_resource type="PackedScene" uid="uid://b08631to2twuy" path="res://scenes/Objects/tv_d2.tscn" id="14_nnj25"]
[ext_resource type="Texture2D" uid="uid://dciukd8npw6x2" path="res://assets/misc/crack_3.png" id="15_83bgp"]
[ext_resource type="Texture2D" uid="uid://c8pr53qdhnfn7" path="res://assets/misc/crack_4.png" id="16_4t75p"]
[ext_resource type="Texture2D" uid="uid://d3t7e3b5dulg7" path="res://assets/misc/crack_1.png" id="17_n8g5f"]
[ext_resource type="Texture2D" uid="uid://0atsfe242lba" path="res://assets/misc/floor_crack.png" id="18_86jlu"]
[ext_resource type="PackedScene" uid="uid://cpuj6ktdfqhdu" path="res://scenes/change_room.tscn" id="19_rp4tb"]
[ext_resource type="Texture2D" uid="uid://dkcfj3mhkcom4" path="res://assets/Spritesheets/player_idle_right.png" id="20_buk5g"]
[ext_resource type="Texture2D" uid="uid://bt55338t2mcu3" path="res://assets/objects/remote.png" id="22_3yau0"]
[ext_resource type="Texture2D" uid="uid://csago72bbir6w" path="res://assets/objects/remote_outline.png" id="23_wp1dh"]
[ext_resource type="PackedScene" uid="uid://d24rahutnton5" path="res://scenes/DialogueArea.tscn" id="24_v5l6h"]
[ext_resource type="Script" uid="uid://divt8ny53jpna" path="res://scripts/DialogueExportResource.gd" id="25_qop75"]
[ext_resource type="Script" uid="uid://c7hf8sppb4268" path="res://scripts/DialogueTextResource.gd" id="26_s86u8"]
[ext_resource type="AudioStream" uid="uid://dy3b7ol61unl7" path="res://assets/sfx/ian_voice.wav" id="27_8glna"]
[ext_resource type="Script" uid="uid://bj218rqao0syu" path="res://scripts/DialogueFunctionResource.gd" id="29_s86u8"]

[sub_resource type="Gradient" id="Gradient_yw21r"]
offsets = PackedFloat32Array(0, 0.7310606)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_q0npr"]
gradient = SubResource("Gradient_yw21r")
width = 244
height = 244
fill = 1
fill_from = Vector2(0.5, 0.4871795)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_giuew"]
polygon = PackedVector2Array(122, 14, 101, 6, 122, 16, 122, 26, 100, 35, 122, 28, 124, 28, 124, 14)

[sub_resource type="Curve" id="Curve_1yhw0"]
_data = [Vector2(0, 0.56320006), 0.0, 0.0, 0, 0, Vector2(0.27480915, 1), 0.0, 0.0, 0, 0, Vector2(0.71374047, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.56320006), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_j7lcb"]
width = 2048
curve = SubResource("Curve_1yhw0")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_hidqn"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(64, 30, 1)
direction = Vector3(-1, 0, 0)
spread = 180.0
initial_velocity_min = 0.099999994
initial_velocity_max = 0.5
gravity = Vector3(-1, 2, 0)
scale_curve = SubResource("CurveTexture_j7lcb")
alpha_curve = ExtResource("13_e2o4e")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oanpf"]
size = Vector2(20, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7kmsl"]
size = Vector2(36, 8)

[sub_resource type="Resource" id="Resource_bev3e"]
script = ExtResource("26_s86u8")
text = "*was it a mistake?"
text_speed = 10.0
text_sound = ExtResource("27_8glna")
text_volume_pitch_min = 0.75
text_volume_pitch_max = 0.7
metadata/_custom_type_script = "uid://c7hf8sppb4268"

[sub_resource type="Resource" id="Resource_8glna"]
script = ExtResource("29_s86u8")
target_path = NodePath("..")
function_name = "set_false"
hide_dialogue_box = true
metadata/_custom_type_script = "uid://bj218rqao0syu"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_808va"]
size = Vector2(23, 7)

[sub_resource type="Resource" id="Resource_xgyw7"]
script = ExtResource("29_s86u8")
target_path = NodePath("..")
function_name = "sitOnCouch"
hide_dialogue_box = true
metadata/_custom_type_script = "uid://bj218rqao0syu"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s86u8"]
size = Vector2(8, 11)

[node name="D4Livingroom" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_qop75")

[node name="BlackScreen" type="CanvasLayer" parent="."]
layer = 2

[node name="Sprite2D" type="Sprite2D" parent="BlackScreen"]
modulate = Color(0, 0, 0, 0)
position = Vector2(160.5, 89.99999)
scale = Vector2(327.00003, 188)
texture = ExtResource("2_8glna")
metadata/_edit_lock_ = true

[node name="Tiles" type="TileMapLayer" parent="."]
z_index = -1
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAIAAAAAAAAAAAABAAAAAAAAAAAAAAABAAEAAAAAAAAAAAABAAIAAAAAAAAAAAACAAAAAAAAAAAAAAACAAEAAAAAAAAAAAACAAIAAAAAAAAAAAADAAIAAAAAAAAAAAADAAEAAAAAAAAAAAADAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAEAAEAAAAAAAAAAAAEAAIAAAAAAAAAAAAFAAIAAAAAAAAAAAAFAAEAAAAAAAAAAAAFAAAAAAAAAAAAAAAGAAAAAAAAAAAAAAAGAAEAAAAAAAAAAAAGAAIAAAAAAAAAAAAHAAIAAAAAAAAAAAAHAAAAAAAAAAAAAAAHAAEAAAAAAAAAAAAAAP//AAAGAAEAAAADAP//AAADAAEAAAAEAP//AAADAAEAAAAHAP//AAADAAEAAAAAAP7/AAAGAAAAAAACAP7/AAAGAAIAAAADAP7/AAADAAAAAAAEAP7/AAADAAAAAAAHAP7/AAADAAAAAAD//wIAAAACAAIAAAD//wEAAAACAAIAAAD//wAAAAACAAIAAAD/////AAACAAEAAAD///7/AAACAAAAAAAIAAIAAAAEAAIAAAAIAAEAAAAEAAIAAAAIAAAAAAAEAAIAAAAIAP//AAAEAAEAAAAIAP7/AAAEAAAAAAAFAP7/AAADAAAAAAAFAP//AAADAAEAAAAGAP7/AAADAAAAAAAGAP//AAADAAEAAAD//wMAAAACAAQAAAAAAAMAAAAAAAQAAAABAAMAAAAFAAMAAAACAAMAAAABAAQAAAADAAMAAAADAAQAAAAEAAMAAAAAAAQAAAAGAAMAAAAFAAMAAAAHAAMAAAABAAQAAAAIAAMAAAAEAAQAAAACAP//AAAGAAMAAAABAP//AAADAAMAAAABAP7/AAADAAIAAAAFAAMAAAAFAAMAAAA=")
tile_set = ExtResource("1_f6swm")
metadata/_edit_lock_ = true

[node name="Player" parent="." instance=ExtResource("2_3yau0")]
position = Vector2(60, 22)
speed = 42.0

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(66, 18)

[node name="Couch" parent="." instance=ExtResource("2_ywxxk")]
position = Vector2(94, 17)

[node name="tvLight" type="PointLight2D" parent="."]
position = Vector2(121, 21)
enabled = false
color = Color(1, 1, 0.8156863, 1)
energy = 0.2
shadow_enabled = true
shadow_item_cull_mask = 3
texture = ExtResource("3_3yau0")
script = ExtResource("4_wp1dh")
metadata/_edit_lock_ = true

[node name="ceilingLight" type="PointLight2D" parent="."]
position = Vector2(64, 19)
scale = Vector2(0.44262296, 0.3114754)
energy = 0.2
range_item_cull_mask = 3
texture = SubResource("GradientTexture2D_q0npr")
metadata/_edit_lock_ = true

[node name="couchLight" type="PointLight2D" parent="."]
position = Vector2(105, 23.000002)
scale = Vector2(0.29149595, 0.27560243)
enabled = false
energy = 0.65
range_item_cull_mask = 3
texture = SubResource("GradientTexture2D_q0npr")
metadata/_edit_lock_ = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_giuew")

[node name="TheBox" parent="." instance=ExtResource("5_anwel")]
position = Vector2(7, 0)

[node name="Lamp" parent="." instance=ExtResource("6_e7h72")]
position = Vector2(123, 6)

[node name="Plant2" parent="." instance=ExtResource("7_bev3e")]
position = Vector2(48, 3)

[node name="BrokenPicture" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(95, 1)
texture = ExtResource("8_v5l6h")

[node name="GlassShard2" type="Sprite2D" parent="BrokenPicture"]
position = Vector2(11, 2)
rotation = -0.5235584
texture = ExtResource("9_qop75")

[node name="GlassShard3" type="Sprite2D" parent="BrokenPicture"]
position = Vector2(-13, 7)
rotation = -1.8325958
texture = ExtResource("9_qop75")

[node name="GlassShard4" type="Sprite2D" parent="BrokenPicture"]
position = Vector2(-12, 1)
rotation = 0.5235988
texture = ExtResource("10_s86u8")

[node name="Radiator" parent="." instance=ExtResource("11_8glna")]
position = Vector2(2, 27)

[node name="dust" type="GPUParticles2D" parent="."]
position = Vector2(64, 17)
amount = 30
texture = ExtResource("12_808va")
speed_scale = 0.2
fixed_fps = 60
process_material = SubResource("ParticleProcessMaterial_hidqn")
metadata/_edit_lock_ = true

[node name="TV" parent="." instance=ExtResource("14_nnj25")]
position = Vector2(123, 19)

[node name="Crack3" type="Sprite2D" parent="."]
position = Vector2(65, -16)
texture = ExtResource("15_83bgp")

[node name="Crack4" type="Sprite2D" parent="."]
position = Vector2(67, -4)
texture = ExtResource("16_4t75p")

[node name="Crack1" type="Sprite2D" parent="."]
position = Vector2(52, 51)
texture = ExtResource("17_n8g5f")
flip_h = true

[node name="FloorCracks" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(67, 4)
texture = ExtResource("18_86jlu")

[node name="FloorCrack2" type="Sprite2D" parent="FloorCracks"]
position = Vector2(-12, 36)
scale = Vector2(1, 2)
texture = ExtResource("18_86jlu")

[node name="Crack2" type="Sprite2D" parent="FloorCracks"]
position = Vector2(-14, 45)
texture = ExtResource("17_n8g5f")
flip_h = true

[node name="Crack5" type="Sprite2D" parent="FloorCracks"]
position = Vector2(-1, -12)
scale = Vector2(1, 1.9999999)
texture = ExtResource("16_4t75p")

[node name="toBedroom" parent="." instance=ExtResource("19_rp4tb")]
position = Vector2(24, -5)
wanted_room_path = "res://scenes/Days/DayFour/d4_bedroom.tscn"
wanted_player_pos = Vector2(56, 42)

[node name="CollisionShape2D" type="CollisionShape2D" parent="toBedroom"]
shape = SubResource("RectangleShape2D_oanpf")

[node name="toEntry" parent="." instance=ExtResource("19_rp4tb")]
position = Vector2(24, 55)
wanted_room_path = "res://scenes/Days/DayFour/d4_entry.tscn"
wanted_player_pos = Vector2(72, 4)

[node name="CollisionShape2D" type="CollisionShape2D" parent="toEntry"]
shape = SubResource("RectangleShape2D_oanpf")

[node name="toKitchen" parent="." instance=ExtResource("19_rp4tb")]
position = Vector2(96, 55)
wanted_room_path = "res://scenes/Days/DayFour/d4_kitchen.tscn"
wanted_player_pos = Vector2(80, 7)
isDoor = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="toKitchen"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_7kmsl")

[node name="nail" type="Sprite2D" parent="."]
modulate = Color(0.32156864, 0.32156864, 0.36078432, 1)
position = Vector2(94.5, -16.5)
scale = Vector2(1.0000019, 1.0000005)
texture = ExtResource("12_808va")

[node name="Player_on_couch" type="Sprite2D" parent="."]
visible = false
position = Vector2(96, 18)
texture = ExtResource("20_buk5g")
hframes = 2
frame = 1

[node name="Remote" type="Sprite2D" parent="Player_on_couch"]
position = Vector2(4, 5)
texture = ExtResource("22_3yau0")

[node name="ambience" type="CanvasModulate" parent="."]
color = Color(0.54725987, 0.5333227, 0.58319277, 1)

[node name="FOR_DAY_5" type="Sprite2D" parent="."]
visible = false
position = Vector2(258, 21)
texture = ExtResource("23_wp1dh")

[node name="ceilingLight" type="PointLight2D" parent="FOR_DAY_5"]
position = Vector2(0, 1.9073486e-06)
scale = Vector2(0.16803275, 0.1557377)
energy = 0.54
range_item_cull_mask = 3
texture = SubResource("GradientTexture2D_q0npr")

[node name="blameDialog" parent="." instance=ExtResource("24_v5l6h")]
position = Vector2(24, -3)
activate_instant = true
only_activate_once = true
dialogue = Array[ExtResource("25_qop75")]([SubResource("Resource_bev3e"), SubResource("Resource_8glna")])

[node name="CollisionShape2D" type="CollisionShape2D" parent="blameDialog"]
position = Vector2(-1.5, 5.5)
shape = SubResource("RectangleShape2D_808va")
disabled = true

[node name="tv_watch" parent="." instance=ExtResource("24_v5l6h")]
position = Vector2(97, 25)
only_activate_once = true
dialogue = Array[ExtResource("25_qop75")]([SubResource("Resource_xgyw7")])

[node name="trigger_watch_tv" type="CollisionShape2D" parent="tv_watch"]
position = Vector2(-1, -0.5)
shape = SubResource("RectangleShape2D_s86u8")
disabled = true
